styles.css
:root {
  --dark-purple: hsl(273, 85%, 13%);
  --davys-grey: hsl(271, 12%, 34%);
  --eucalyptus: hsl(150, 100%, 63%);
  --ghost-white: #fcf8ff;
  --white: hsl(0, 0%, 100%);
}

@font-face {
  font-family: Fraunces;
  src: url(assets/fonts/fraunces/static/Fraunces_144pt-SemiBold.ttf);
}

@font-face {
  font-family: Manrope;
  src: url(assets/fonts/manrope/static/Manrope-Regular.ttf);
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  color: var(--white);
}

body {
  overflow-x: hidden;
}

h1 {
  font-family: Fraunces;
  font-size: 80px;
  line-height: 90px;
  color: var(--white);
}

h2 {
  font-family: Fraunces;
  font-size: 56px;
  line-height: 64px;
  color: var(--white);
}

h3 {
  font-family: Fraunces;
  font-size: 32px;
  line-height: 40px;
  color: var(--dark-purple);
}

h4 {
  font-family: Fraunces;
  font-size: 26px;
  line-height: 40px;
  color: var(--dark-purple);
}

section {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  align-items: center;
  padding: 55px 5%;
  position: relative;
  text-align: center;
  min-height: 40%;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--dark-purple);
  padding: 56px 5%;
}

nav a {
  color: var(--white);
  text-decoration: none;
  font-family: Manrope;
  font-size: 18px;
}

nav a:hover {
  color: var(--eucalyptus);
}

.underlined {
  border-bottom: 3px solid var(--eucalyptus);
}

#title {
  background-color: var(--dark-purple);
}

.bg-pattern-1 {
  display: none;
}

.bg-pattern-2 {
  display: none;
}

.title-content {
  padding: 0 0 100px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#title h1 {
  max-width: 800px;
}

#title a {
  margin: 36px;
  z-index: 98;
}

.button {
  text-decoration: none;
  color: var(--dark-purple);
  background-color: var(--eucalyptus);
  padding: 14px 32px;
  font-family: Manrope;
  font-size: 16px;
}

.button:hover {
  color: var(--eucalyptus);
  background-color: var(--dark-purple);
  outline: 2px solid var(--eucalyptus);
}

.hero-img {
  position: absolute;
  bottom: 0;
  transform: translate(0, 80%);
  max-width: 900px;
  bottom: 0;
  z-index: 99;
}

.hero-img img {
  width: 80%;
}

.curve {
  position: absolute;
  bottom: 0;
  transform: translate(0, 50%);
  height: 100px;
  border-radius: 50%;
  width: 100%;
  transform: scaleX(1.5) translate(0, 50%);
  background-color: var(--dark-purple);
  z-index: 97;
}

#perks {
  background-color: var(--ghost-white);
  color: var(--dark-purple);
}

#perks ol {
  list-style: none;
  margin: 200px 0 0 0;
  display: flex;
  flex-direction: column;
  gap: 10%;
}

#perks li {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
  flex-grow: 1;
}

.perk-content {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.circle {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: Fraunces;
  font-size: 26px;
  color: var(--dark-purple);
  height: 50px;
  width: 50px;
  border: 1px solid var(--dark-purple);
  border-radius: 50%;
  flex-shrink: 0;
}

.perk {
  margin-bottom: 50px;
}

p {
  color: var(--davys-grey);
  font-family: Manrope;
  font-size: 18px;
  line-height: 32px;
}

#perks .curve {
  background-color: var(--ghost-white);
}

.founder-card {
  margin-top: 300px;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  text-align: center;
  background-color: var(--dark-purple);
  padding: 30px;
}

.founder-card h2 {
  font-size: 32px;
}

.founder-img {
  position: absolute;
  max-width: 50%;
  top: -50%;
  left: 25%;
  z-index: -1;
}

.founder-card p {
  color: var(--white);
  font-size: 16px;
}

.founder-card a {
  text-decoration: none;
}

.bg-pattern-3 {
  display: none;
}

footer {
  padding: 30px;
  text-align: center;
  line-height: 100px;
}

.footer-icons {
  display: flex;
  justify-content: center;
  gap: 2rem;
}

.footer-icons svg {
  fill: var(--davys-grey);
}

.footer-icons svg:hover {
  fill: var(--dark-purple);
}

/* Tablet size */
@media only screen and (min-width: 600px) {
  #perks ol {
    margin: 300px 0 0 0;
  }

  #perks li {
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
  }

  .perk-content {
    text-align: left;
  }

  .founder-card {
    margin-top: 200px;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: 2rem;
    text-align: left;
    background-color: var(--dark-purple);
    padding: 60px;
    margin-left: 30%;
  }

  .founder-img {
    position: absolute;
    top: -27%;
    left: -35%;
  }

  .bg-pattern-1 {
    position: absolute;
    left: -170px;
    display: inline;
  }

  .bg-pattern-2 {
    position: absolute;
    right: -100px;
    bottom: 70px;
    display: inline;
  }

  .bg-pattern-3 {
    display: inline;
    position: absolute;
    bottom: -100px;
    right: -10px;
  }
}

/* Desktop size */
@media only screen and (min-width: 1000px) {
  #perks ol {
    flex-direction: row;
    margin: 400px 0 0 0;
  }

  .curve {
    height: 225px;
  }

  .founder-card {
    margin-top: 400px;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: 2rem;
    text-align: left;
    background-color: var(--dark-purple);
    padding: 60px;
    margin-left: 30%;
  }

  .founder-img {
    position: absolute;
    max-width: 400px;
    top: -70%;
    left: -300px;
  }

  .bg-pattern-1 {
    position: absolute;
    left: -110px;
    display: inline;
  }

  .bg-pattern-2 {
    position: absolute;
    right: -60px;
    bottom: 70px;
    display: inline;
  }

  .bg-pattern-3 {
    display: inline;
    position: absolute;
    bottom: -100px;
    right: 150px;
  }
}

